started to dip into some html elements. psuedo still needs work.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
     <title>JavaScript Quiz</title>
 </head>
 <body>
-    
+    <div>
+        <div>
+            <a href="./highscore.html">View Highscore</a>
+        </div>
+
+        <div id="timer">You have <span id="time">1:00</span> seconds remaining!</div>
+    </div>
+
+
+
+    <div class="maingrid">
+        <div id="quiz">
+            <h1>Coding Quiz Challenge</h1>
+
+            <p id="question"></p>
+
+            <div class="buttons">
+                <button id="btn0"><span id="choice0"></span></button>
+                <button id="btn1"><span id="choice1"></span></button>
+                <button id="btn2"><span id="choice2"></span></button>
+                <button id="btn3"><span id="choice3"></span></button>
+            </div>
+
+            <footer>
+                <p id="progress">Question x out of y</p>
+            </footer>
+        </div>
+    </div>
 
 
     <script src="./script.js"></script>
