--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <div>
-        <div>
+        
             <a href="./highscore.html">View Highscore</a>
-        </div>
-
-        <div id="timer">You have <span id="time">1:00</span> seconds remaining!</div>
+            <p id="timer">You have <span id="time">1:00</span> seconds remaining!</p>
+        
     </div>
 
 
@@ -24,10 +23,10 @@
             <p id="question"></p>
 
             <div class="buttons">
-                <button id="btn0"><span id="choice0"></span></button>
-                <button id="btn1"><span id="choice1"></span></button>
-                <button id="btn2"><span id="choice2"></span></button>
-                <button id="btn3"><span id="choice3"></span></button>
+                <button class="btnstyle" id="btn0"><span id="choice0"></span></button>
+                <button class="btnstyle" id="btn1"><span id="choice1"></span></button>
+                <button class="btnstyle" id="btn2"><span id="choice2"></span></button>
+                <button class="btnstyle" id="btn3"><span id="choice3"></span></button>
             </div>
 
             <footer>
