office hours work on objects/arrays

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
 
     <div class="maingrid">
-        <div id="quiz">
+        <div data-begin="begin" id="quizContainer">
             <h1>Coding Quiz Challenge</h1>
+            <button id="startButton">START QUIZ</button>
 
             <p id="question"></p>
 
