--- a/index.html
+++ b/index.html
@@ -15,8 +15,22 @@
     </div>
 
 
+    <div class="container">
+        <div id="question-container" class="hide">
+            <div id="question">Question</div>
+            <div id="answer-buttons" class="btn-grid">
+              <button class="btn">Answer 1</button>
+              <button class="btn">Answer 2</button>
+              <button class="btn">Answer 3</button>
+              <button class="btn">Answer 4</button>
+            </div>
+        </div>
+        <div class="controls">
+            <button id="start-btn" class="start-btn btn">Start!</button>
+        </div>
+    </div>
 
-    <div class="maingrid">
+    <!-- <div class="container">
         <div data-begin="begin" id="quizContainer">
             <h1>Coding Quiz Challenge</h1>
             <button id="startButton">START QUIZ</button>
@@ -34,7 +48,7 @@
                 <p id="progress">Question x out of y</p>
             </footer>
         </div>
-    </div>
+    </div> -->
 
 
     <script src="./script.js"></script>
