--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>JavaScript Quiz</title>
+    <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
 </head>
 <body>
     <div>
@@ -19,10 +23,10 @@
         <div id="question-container" class="hide">
             <div id="question">Question</div>
             <div id="answer-buttons" class="btn-grid">
-              <button class="btn">Answer 1</button>
+              <!-- <button class="btn">Answer 1</button>
               <button class="btn">Answer 2</button>
               <button class="btn">Answer 3</button>
-              <button class="btn">Answer 4</button>
+              <button class="btn">Answer 4</button> -->
             </div>
         </div>
         <div class="controls">
@@ -51,6 +55,6 @@
     </div> -->
 
 
-    <script src="./script.js"></script>
+    <script src="./reference.js"></script>
 </body>
 </html>
