got the timer working

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>
         
             <a href="./highscore.html">View Highscore</a>
-            <p id="timer">You have <span id="time">1:00</span> seconds remaining!</p>
+            <p id="timer">You have <span id="time">120</span> seconds remaining!</p>
         
     </div>
 
@@ -23,10 +23,7 @@
         <div id="question-container" class="hide">
             <div id="question">Question</div>
             <div id="answer-buttons" class="btn-grid">
-              <!-- <button class="btn">Answer 1</button>
-              <button class="btn">Answer 2</button>
-              <button class="btn">Answer 3</button>
-              <button class="btn">Answer 4</button> -->
+            <!-- Using the 123 punch method with Jquery to add buttons and options in dynamically -->
             </div>
         </div>
         <div class="controls">
