simple update on highscore page

--- a/highscore.html
+++ b/highscore.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+        <div class="score-container">
+            <h1>Highscores:</h1>
+        </div>
 
 
     <script src="./script.js"></script>
