working on the function to increase and decrease the points. I think I've got some structer coming along but it isn't working

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
             <button id="start-btn" class="start-btn btn">Start!</button>
         </div>
     </div>
+    <div class="store-score">
+        <div id="correct">
+            <h2>Correct: <span id="counter-correct">0</span></h2>
+        </div>
+        <div id="incorrect">
+            <h2>Incorrect: <span id="counter-incorrect">0</span></h2>
+        </div>
+    </div>
 
 
     <script src="./script.js"></script>
